<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgp"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:text="@string/select_date"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_date"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:text="@string/daoshurimingcheng"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_time"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/customet"
            android:textColor="@color/current_time_text"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:background="@color/current_time_bg"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:text="@string/riqikaleixing"
        android:textColor="@color/select_title_text"
        android:textSize="15sp"
        android:id="@+id/datename"
        />
    <LinearLayout
        android:id="@+id/SpinnerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/spinner"
            ></Spinner>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="150dp" />
    <Button
    android:layout_width="150dp"
    android:layout_height="50dp"
    android:layout_gravity="center_horizontal"
    android:onClick="newClick"
        android:background="@drawable/addbutton"
    android:id="@+id/btn"
    />


</LinearLayout>
