<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgp"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="fill_parent"
                android:layout_height="60dp" />

            <RelativeLayout
                android:id="@+id/menull1"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item1"
                android:onClick="menuClick"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/纪念日"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/right" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menull2"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item2"
                android:onClick="menuClick"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/kaoshi"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/right"

                    />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menull3"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item2"
                android:onClick="menuClick"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/生日"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/right"

                    />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menull4"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item2"
                android:onClick="menuClick"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/节假日"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/right" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menull5"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item2"
                android:onClick="menuClick"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/旅行"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/right" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/menull6"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:background="@drawable/item3"
                android:onClick="menuClick"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/自定义"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/right" />


            </RelativeLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/menull1" />

            <RelativeLayout
                android:id="@+id/menull7"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/menubtn"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button"
                    android:onClick="menuClick" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>